apps/petcarelog/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petcarelog
  labels:
    app: petcarelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petcarelog
  template:
    metadata:
      labels:
        app: petcarelog
    spec:
      serviceAccountName: petcarelog-app-sa

      containers:
        - name: petcarelog
          image: 194722398200.dkr.ecr.ap-northeast-2.amazonaws.com/team5-petcarelog-dev:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 700m
              memory: 1Gi
