apps/petcarelog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petcarelog-service
  labels:
    app: petcarelog
spec:
  type: ClusterIP
  selector:
    app: petcarelog
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
